--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1507,7 +1507,7 @@ body {
     .info_card {
         color: var(--TC);
         padding: 1rem 1.5rem 2rem;
-        transition: var(--T_S);
+        transition: var(--T_F);
         P,
         H3,
         H4 {
@@ -1539,7 +1539,6 @@ body {
     .info_card {
         @include flexDirection(column, flex-start, center);
         background: var(--bgC_UT);
-        transition: var(--T_S);
         width: 100%;
         height: 100%;
         H2 {
@@ -1596,7 +1595,6 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        transition: var(--T_S);
         background: var(--bgM);
         opacity: 0;
 
