fix --> my animation overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,7 +78,7 @@
   --midLight: hsl(0, 0%, 50%);
   --FS_XS: 0.8rem;
   --FS_S: 1rem;
-  --FS_N: 1.2rem;
+  --FS_N: 1.4rem;
   --FS_L: 1.8rem;
   --FS_X: 2.8rem;
   --FS_XL: 6rem;
@@ -194,6 +194,7 @@ body {
   height: 100%;
   position: relative;
   scroll-behavior: smooth;
+  overflow-x: hidden;
   color: var(--TC);
   background: var(--bgC);
 }
