--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -347,12 +347,10 @@ body {
 }
 .modal {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
     background: var(--bgM);
     z-index: 9;
     display: none;
