--- a/src/css/style.css
+++ b/src/css/style.css
@@ -102,7 +102,7 @@
   --P_XX: 2.5rem;
   --FS: 12px;
   --NVH_F: 6rem;
-  --NVH: 10rem;
+  --NVH: 8rem;
   --FS_NVH: calc(100vh - var(--NVH));
   --titanimFont: "Titillium Web", sans-serif;
   font-family: var(--titanimFont);
@@ -306,8 +306,8 @@ body P {
 
 .modal {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   background: var(--bgM);
@@ -705,8 +705,7 @@ body P {
   justify-content: center;
   align-items: center;
   width: 5rem;
-  height: 4rem;
-  height: 100%;
+  height: 4.5rem;
   color: var(--TC);
 }
 .nav_menu .menu_btn .btn_construction {
