fix --> card project animation

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1649,13 +1649,14 @@ body P {
   transform: scale(1);
 }
 
-/* .animation_up,
+.animation_up,
 .card_up {
-    opacity: 0;
-    transform: translateY(4rem);
-    transition: var(--T-S);
-} 
+  opacity: 0;
+  transform: translateY(4rem);
+  transition: var(--T_M);
+}
 
+/*
 //^ SWIPER LEFT CONTAINER
 .animation_left {
     opacity: 0;
